{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 206,
  "lineage": "e51de88a-a1e9-8196-cfce-d99905246ea7",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f23537593f6c6934",
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:elastic-ip/eipalloc-0f23537593f6c6934",
            "association_id": "eipassoc-0b20d0bb5aeff7878",
            "domain": "vpc",
            "id": "eipalloc-0f23537593f6c6934",
            "instance": "i-07e9144451edf0ca6",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a9444b3c43d75185",
            "private_dns": "ip-10-0-1-254.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.254",
            "public_dns": "ec2-47-130-130-41.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "47.130.130.41",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Env": "sandbox",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "vpc": true
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.aws_iam_role_policy_attachment.cw_logs",
            "module.iam.data.aws_iam_policy_document.assume_ec2",
            "module.sg.aws_security_group.ec2_sg",
            "module.sg.data.aws_iam_policy_document.assume_ec2",
            "module.vpc.aws_internet_gateway.i_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_subnet_assoc",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b8607d2721c94a77",
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:instance/i-0826fb78489e3d298",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "sandbox-hantt-and-co-ec2-instance-profile",
            "id": "i-0826fb78489e3d298",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "sandbox-hantt-and-co-ec2-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0841e90153e7b93a8",
            "private_dns": "ip-10-0-1-130.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-18-140-5-111.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.140.5.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "Env": "sandbox",
                  "ProjectName": "hantt-and-co",
                  "Terraform": "True"
                },
                "throughput": 125,
                "volume_id": "vol-02492fac136e3bd40",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b2adec304514045d",
            "tags": {
              "Name": "sandbox-hantt-and-co-ec2-instance"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "sandbox-hantt-and-co-ec2-instance",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-062a5dab168b29a04"
            ]
          },
          "dependencies": [
            "module.ec2.aws_key_pair.key_pair",
            "module.ec2.data.aws_ami.ubuntu",
            "module.ec2.tls_private_key.private_key",
            "module.iam.aws_iam_instance_profile.ec2_profile",
            "module.iam.aws_iam_role.ec2_role",
            "module.iam.aws_iam_role_policy_attachment.cw_logs",
            "module.iam.data.aws_iam_policy_document.assume_ec2",
            "module.sg.aws_security_group.ec2_sg",
            "module.sg.data.aws_iam_policy_document.assume_ec2",
            "module.vpc.aws_internet_gateway.i_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_subnet_assoc",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:security-group/sg-062a5dab168b29a04",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all traffic to all IPv4 addresses",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-062a5dab168b29a04",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS to all IPv4 addresses",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH to all IPv4 addresses",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sandbox-hantt-and-co-ec2-sg",
            "name_prefix": "",
            "owner_id": "140661056595",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Env": "sandbox",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0710149f4c1fd5084"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.i_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_route_table_association.public_subnet_assoc",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "i_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:internet-gateway/igw-0fb00376ee3c1a44f",
            "id": "igw-0fb00376ee3c1a44f",
            "owner_id": "140661056595",
            "tags": {
              "Name": "sandbox-hantt-and-co-i-gw"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "sandbox-hantt-and-co-i-gw",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0710149f4c1fd5084"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:route-table/rtb-04b4b71da5c6ea0cd",
            "id": "rtb-04b4b71da5c6ea0cd",
            "owner_id": "140661056595",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb00376ee3c1a44f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sandbox-hantt-and-co-public-rt"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "sandbox-hantt-and-co-public-rt",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "timeouts": null,
            "vpc_id": "vpc-0710149f4c1fd5084"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.i_gw",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03cabf533cf5546e6",
            "route_table_id": "rtb-04b4b71da5c6ea0cd",
            "subnet_id": "subnet-0b2adec304514045d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.i_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05956c1e2388cdd88",
            "route_table_id": "rtb-04b4b71da5c6ea0cd",
            "subnet_id": "subnet-092481f7872bef644"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.i_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0640afbdb9fb951b1",
            "route_table_id": "rtb-04b4b71da5c6ea0cd",
            "subnet_id": "subnet-0e66d128a5cd7f074"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.i_gw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:subnet/subnet-0b2adec304514045d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b2adec304514045d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140661056595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox-hantt-and-co-public-subnet-1"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "sandbox-hantt-and-co-public-subnet-1",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0710149f4c1fd5084"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:subnet/subnet-092481f7872bef644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092481f7872bef644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140661056595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox-hantt-and-co-public-subnet-2"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "sandbox-hantt-and-co-public-subnet-2",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0710149f4c1fd5084"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:subnet/subnet-0e66d128a5cd7f074",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e66d128a5cd7f074",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "140661056595",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sandbox-hantt-and-co-public-subnet-3"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "sandbox-hantt-and-co-public-subnet-3",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            },
            "vpc_id": "vpc-0710149f4c1fd5084"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:140661056595:vpc/vpc-0710149f4c1fd5084",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-018b3d14a67c3489d",
            "default_route_table_id": "rtb-0f2e57720b4af86ee",
            "default_security_group_id": "sg-0799a6f1f4b3d8883",
            "dhcp_options_id": "dopt-03743c14e23a064ab",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0710149f4c1fd5084",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2e57720b4af86ee",
            "owner_id": "140661056595",
            "tags": {
              "Name": "sandbox-hantt-and-co-vpc"
            },
            "tags_all": {
              "Env": "sandbox",
              "Name": "sandbox-hantt-and-co-vpc",
              "ProjectName": "hantt-and-co",
              "Terraform": "True"
            }
          }
        }
      ]
    }
  ]
}